fix horizontal scroll on mobile

--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ body {
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 h1,
@@ -287,5 +289,6 @@ form input[type=submit]:hover
   }
 
 }
+
 
 
